#ifndef UNTITLED2_SCENE_H
#define UNTITLED2_SCENE_H


class Scene {

};


#endif //UNTITLED2_SCENE_H
